# research-swarm

./: .gitignore  NEXT_STEPS.md  README.md  pyproject.toml
src/autoresearch_swarm/: agent.py  auto_scale.py  cli.py  config.py  coordinator.py  cross_repo.py  git_ops.py  pareto_integration.py  results.py  ssh_executor.py  strategies.py
src/research_swarm/: __init__.py  agent.py  cli.py  coordinator.py  cross_repo.py  llm_strategy.py  pareto_integration.py  results.py  ssh_executor.py
tests/: test_adaptive.py  test_agent.py  test_auto_scale.py  test_config.py  test_conflict_resolution.py  test_coordinator.py  test_cross_repo.py  test_git_ops.py  test_llm_strategy.py  test_messaging.py  test_parallel.py  test_pareto.py  test_plugins.py  test_results.py  test_ssh_executor.py  test_strategies.py
