[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "autoresearch-swarm"
version = "0.1.0"
description = "Multi-agent distributed research with git-based coordination"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
autoresearch-swarm = "autoresearch_swarm.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
