[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoresearch-swarm"
version = "0.1.0"
description = "Multi-agent distributed research with git-based coordination"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
ssh = [
    "paramiko>=3.0",
]
llm = [
    "anthropic>=0.20",
]
autoscale = [
    "psutil>=5.9",
]
all = [
    "paramiko>=3.0",
    "anthropic>=0.20",
    "psutil>=5.9",
]

[project.scripts]
autoresearch-swarm = "autoresearch_swarm.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
